--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
+/* *{outline: 1px solid red} */
 .App {
+  background-color: #f5f5f5;
   text-align: center;
-  background-color: #f1f5fb;
   font-size: 14px!important;
   overflow-x: hidden;
   overflow-y: hidden;
@@ -16,15 +17,20 @@ p {
 .mainContainer {
   display: flex;
   margin: 0px !important;
+  height: 85vh;
 }
 .sidebarContainer {
-  flex: 1 1 auto;
+  /* flex: 1 1 auto; */
   border-right: 1px lightgrey solid;
+  padding-top: 2rem;
+  width: 17rem;
 }
 .pageContainer {
-  flex: 11 1 auto;
+  /* flex: 11 1 auto; */
   min-height: auto !important;
-  padding: 24px;
+  padding: 2rem 4rem;
+  width: 83vw;
+  overflow-y: auto;
 }
 .display-web {
   display: block;
@@ -52,6 +58,111 @@ p {
   display: none;
 }
 
+.contentHeader{
+  height: fit-content;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+}
+.contentLabel{
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  text-align: start;
+  padding: 8px 0px;
+  gap: 4px; /*4px*/
+}
+.contentLabel h4{
+  font-size: 1.75rem;
+}
+.contentLabel p{
+  font-size: 14px;
+  margin: 0;
+}
+.contentButton button{
+  width: fit-content;
+  height: 40px;
+  padding: 6px 16px;
+  outline: 1px solid #2a75c0;
+  border-radius: 8px;
+  color: #2a75c0;
+  border: none;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 24px;
+}
+.contentButton button:hover{
+  background-color: #2a75c0;
+  color: #f5f5f5;
+  outline: none;
+  transition: background-color 0.3s;
+}
+.container{
+  padding: 0;
+}
+
+.table-container {
+  /* // margin: 20px; */
+   /* padding-block: 20px; */
+   background-color: #d9e8f6;
+   border-radius: 20px;
+   margin: 1rem 0;
+   box-shadow: none;
+   border-radius: 8px;
+   
+ }
+tr, th, td {
+  /* background-color: #d9e8f6!important; */
+  text-align: start;
+  padding: 12px 24px!important;
+  outline: none!important;
+  /* border: none!important; */
+}
+.table-container table thead tr:hover{
+  background-color: grey!important;
+}
+.table-container table thead tr th:first-child {
+  background-color: #404041!important;
+  color: #f5f5f5!important;
+  border-top-left-radius: 8px!important;
+}
+.table-container table thead tr th {
+  background-color: #404041!important;
+  color: #f5f5f5!important;
+}
+.table-container table tbody tr td {
+  background-color: #f5f5f5!important;
+  color: #404041!important;
+  border-bottom: 1px solid lightgrey!important;
+}
+.table-container table tbody tr td:first-child {
+  border-left: 1px solid lightgrey!important;
+  border-bottom: 1px solid lightgrey!important;
+}
+.table-container table tbody tr td:last-child {
+  border-right: 1px solid lightgrey!important;
+  border-bottom: 1px solid lightgrey!important;
+}
+.table-container table thead tr th:last-child {
+  background-color: #404041!important;
+  color: #f5f5f5!important;
+  border-top-right-radius: 8px!important;
+  text-align: center!important;
+}
+
+.table-container table tbody tr:last-child td:first-child {
+  border-bottom-left-radius: 8px!important;
+}
+
+.table-container table tbody tr:last-child td:last-child {
+  border-bottom-right-radius: 8px!important;
+}
+aside{
+  background-color: none;
+  border-right-width: 0px;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
