--- a/src/modules/applications/applications.css
+++ b/src/modules/applications/applications.css
@@ -66,7 +66,7 @@
     margin-bottom: 24px;
     width: 100%;
   }
-
+/* 
   .table-container {
     margin: 20px;
     padding-block: 20px;
@@ -80,7 +80,7 @@
     td {
       background-color: #d9e8f6!important;
     }
-  
+   */
   .icon {
     color: #66a5e2;
     margin: 0px 5px;
