--- a/src/modules/scholar/style.css
+++ b/src/modules/scholar/style.css
@@ -34,3 +34,51 @@
 .link {
   margin-right: 10px;
 }/*# sourceMappingURL=style.css.map */
+
+.contentHeader {
+  height: fit-content;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.contentLabel {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  text-align: start;
+  padding: 8px 0px;
+  gap: 4px;
+  /*4px*/
+}
+
+.contentLabel h4 {
+  font-size: 1.75rem;
+}
+
+.contentLabel p {
+  font-size: 14px;
+  margin: 0;
+}
+
+.contentButton button {
+  width: fit-content;
+  height: 40px;
+  padding: 6px 16px;
+  outline: 1px solid #2a75c0;
+  border-radius: 8px;
+  color: #2a75c0;
+  border: none;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 24px;
+}
+
+.contentButton button:hover {
+  background-color: #2a75c0;
+  color: #f5f5f5;
+  outline: none;
+  transition: background-color 0.3s;
+}
