updated file handling on portfolio

--- a/src/modules/scholar/style.scss
+++ b/src/modules/scholar/style.scss
@@ -53,6 +53,7 @@
 
 .dropzone {
   border: 2px dashed #007bff; /* Border color */
+  cursor: pointer;
   border-radius: 5px;
   padding: 20px;
   text-align: center;
