entire application module now has toaster action notifs, changes to table module for null/undefined data passed from parent component

--- a/src/modules/applications/editModal/style.css
+++ b/src/modules/applications/editModal/style.css
@@ -10,6 +10,8 @@
 .files-container.expanded {
     opacity: 1;
     transform: scaleY(1);
+    margin-bottom: 25px;
+
 }
 .imageCircle{
     display: flex;
