--- a/src/modules/scholar/style.scss
+++ b/src/modules/scholar/style.scss
@@ -64,3 +64,27 @@
       border-color: #0056b3; /* Darker border on hover */
   }
 }
+
+.scholar-modal{
+  padding: 0;
+  outline: 1px solid #e6e6e6;
+  border-radius: 8px;
+  width: 174px;
+  display: flex;
+  flex-direction: column;
+  //styleName: Web/Body/Medium/Medium;
+  font-size: 14px;
+  line-height: 24px;
+  background-color: #fff;
+  position: absolute;
+  left: -6rem;
+  top: -2.5rem;
+  z-index: 5;
+  p{
+    padding: 8px 16px;
+    &:hover{
+      cursor: pointer;
+      background-color: #ececec;
+    }
+  }
+}
