--- a/src/modules/scholar/style.scss
+++ b/src/modules/scholar/style.scss
@@ -33,7 +33,23 @@
 
 .link 
 {
+  // display: flex;
+  // flex-direction: row;
+  // justify-content: center;
+  // align-items: center;
+  text-align: center;
+  padding: 0;
+  margin: 0;
+  svg{
+    height: 24px;
+    width: 24px;
+  }
   margin-right: 10px;
+  &hover{
+    fill: lightblue;
+    cursor: pointer;
+    background-color: #ececec;
+  }
 }
 
 // Added - kyle
@@ -63,4 +79,21 @@
   &:hover {
       border-color: #0056b3; /* Darker border on hover */
   }
+}
+
+.modalActions{
+  display: grid;
+  gap: 0.5rem;
+  grid-template-columns: repeat(2, 1fr);
+  margin: 0;
+  button {
+    margin: 0;
+    width: 13rem !important;
+  }
+}
+.modal-dialog {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 89vh;
 }
