--- a/src/modules/report/styles.css
+++ b/src/modules/report/styles.css
@@ -1,6 +1,10 @@
 .form-container {
     max-width: 400px;
     margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: start;
   }
   
   button {
